# planet-sphere

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: api.py
backend/flatearth/: imports.py
backend/flatearth/models/: feed.py  models.py  place.py  post.py  user.py
backend/flatearth/utils/: geo.py  ip.py  mapping.py
flatearth/: __init__.py  cli.py  imports.py
flatearth/models/: base.py  models.py  place.py  post.py  text.py  user.py
flatearth/utils/: __init__.py  db.py  geo.py  ip.py  mapping.py  trans.py  utils.py
flatearth/webapp/: rxconfig.py
flatearth/webapp/webapp/: imports.py  scripts.py  state.py  styles.py
frontend/: .env  capacitor.config.ts  ionic.config.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-ionic/src/contexts/: LocationContext.tsx
frontend-ionic/src/pages/: HomeTab.tsx
frontend/src/: App.css  App.tsx  vars.tsx
frontend/types/: geo2city.d.ts  ipinfo.d.ts  nearby-cities.d.ts
mobile/: package-lock.json  package.json
mobile/src/: App.tsx
round_earth/: cli.py  imports.py  utils.py
round_earth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
round_earth/models/: base.py  feed.py  models.py  place.py  post.py  text.py  user.py
round_earth/utils/: __init__.py  db.py  ip.py  utils.py
round_earth/webapp/: __init__.py
round_earth_mobile/: capacitor.config.ts  package-lock.json
round_earth_mobile/src/: App.tsx
sphere/: declarations.d.ts  index.html  ionic.config.json  package.json
webapp/webapp/: webapp.py
(+80 files in other folders)
