[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "flatearth"
requires-python = ">=3.8.2"
authors = [
    { name = "Ryan Heuser", email = "ryan.heuser@gmail.com" },
]
description = "API/backend to Flatearth"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version", "dependencies"]
urls = { "Homepage" = "https://github.com/quadrismegistus/flatearth-backend", "Project Home" = "https://github.com/quadrismegistus/flatearth", "Bug Tracker" = "https://github.com/quadrismegistus/flatearth-backend/issues" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.scripts]
flatearth = "flatearth.cli:run"

[tool.setuptools]
packages = ['flatearth']

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}
dependencies = {file = "requirements.txt"}